MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Market_Loss__c.field-meta.xml
<CustomField>
    <fullName>Market_Loss__c</fullName>
    <label>Market Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>