MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Master_Developer__c.field-meta.xml
<CustomField>
    <fullName>Master_Developer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Developer</label>
    <type>TextArea</type>
</CustomField>