MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Master_Developer_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Developer_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Developer License Number</label>
    <type>TextArea</type>
</CustomField>