MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Max_Allowable_Podium__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowable_Podium__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Max Allowable Podium</label>
    <length>18</length>
    <type>Text</type>
</CustomField>