MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Max_No_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Max_No_Of_Floors__c</fullName>
    <label>Max No.Of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>