MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Milestone_No__c.field-meta.xml
<CustomField>
    <fullName>Milestone_No__c</fullName>
    <formula>Text(Sales_Order_Installment__r.MilestoneNumber__c)</formula>
    <label>Milestone No.</label>
    <type>Text</type>
</CustomField>