MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Milestone_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Percentage__c</fullName>
    <formula>Sales_Order_Installment__r.Milestone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>