MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>