MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/New_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>New_Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Payment Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PaymentPlan__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>