MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/NOC_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Extension_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested NOC Extension Date</label>
    <type>Date</type>
</CustomField>