MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OpenDate</label>
    <type>Date</type>
</CustomField>