MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>