MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/OriginalPrice__c.field-meta.xml
<CustomField>
    <fullName>OriginalPrice__c</fullName>
    <formula>SalesOrder__r.TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>