MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Outstanding_Amount1__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outstanding Amount1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>