MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Outstanding_Charge__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Charge__c</fullName>
    <label>Outstanding Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>