MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Overdue_Installments__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Installments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Overdue Installments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>