MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Payable_to_Business_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Business_Calculated__c</fullName>
    <formula>Secondary_Market_Value__c+Market_Loss__c+Sales_Commission__c+Broker_Commission__c+Discount__c+Rebate__c+ADM_Fee__c+Service_Charge_Waiver__c+LPC__c+Legal_Admin_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable to Business - Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>