MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Payable_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Customer__c</fullName>
    <formula>IF(
    ISPICKVAL(Is_ADM_Refund_Needed__c , &apos;ADM&apos;),
    
    ADM_Paid_Amount__c,

    IF(
        ISPICKVAL(Is_ADM_Refund_Needed__c , &apos;Down Payment&apos;),

        Total_Paid_Amount__c,

        IF(
            ISPICKVAL(Is_ADM_Refund_Needed__c , &apos;Both&apos;),

            Total_Paid_Amount__c + ADM_Paid_Amount__c,

            0
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>