MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Payment_Extension_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Extension_Category__c</fullName>
    <formula>IF(( Payment_Extension_Date__c -  Actual_Installment_Date__c)&lt;30, &quot;Upto 30 days&quot;,IF(( Payment_Extension_Date__c -  Actual_Installment_Date__c)&lt;60,&quot;30 to 60 Days&quot;,&quot;60 Days Plus&quot;))</formula>
    <label>Payment Extension Category</label>
    <type>Text</type>
</CustomField>