MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Payment_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Extension_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Extension Date</label>
    <type>Date</type>
</CustomField>