MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/PE_Memo_Seq__c.field-meta.xml
<CustomField>
    <fullName>PE_Memo_Seq__c</fullName>
    <formula>&apos;MEMO-CM-&apos;+Project_Name__c+&apos;-&apos;+Text(YEAR(Sales_Order_Installment__r.MilestoneDate__c))+&apos;-&apos;+Name</formula>
    <label>PE Memo Seq</label>
    <type>Text</type>
</CustomField>