MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Penality_Charge__c.field-meta.xml
<CustomField>
    <fullName>Penality_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Penality Charge</label>
    <type>Checkbox</type>
</CustomField>