MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Phase_Id__c.field-meta.xml
<CustomField>
    <fullName>Phase_Id__c</fullName>
    <formula>UnitId__r.Phase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Id</label>
    <type>Text</type>
</CustomField>