MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Previous_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payment_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Payment Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>