MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>