MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_AccountNameArabic__c.field-meta.xml
<CustomField>
    <fullName>Primary_AccountNameArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary AccountNameArabic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>