MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_CountryArabic__c.field-meta.xml
<CustomField>
    <fullName>Primary_CountryArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary CountryArabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>