MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_EIDNumber__c.field-meta.xml
<CustomField>
    <fullName>Primary_EIDNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary EIDNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>