MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Full Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>