MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>Primary_PassportNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary PassportNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>