MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>