MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_POAAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>Primary_POAAuthorizationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary POA  Authorization Date</label>
    <type>Date</type>
</CustomField>