MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_POAAuthorizationExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>Primary_POAAuthorizationExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary POA Authorization Expiry Date</label>
    <type>Date</type>
</CustomField>