MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_POAAuthorizationNo__c.field-meta.xml
<CustomField>
    <fullName>Primary_POAAuthorizationNo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary POAAuthorizationNo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>