MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_POAIssuedby__c.field-meta.xml
<CustomField>
    <fullName>Primary_POAIssuedby__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary POA Issued by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>