MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>