MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_UAEResidentStatus__c.field-meta.xml
<CustomField>
    <fullName>Primary_UAEResidentStatus__c</fullName>
    <label>Primary UAEResidentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAEResidentStatus</valueSetName>
    </valueSet>
</CustomField>