MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Primary_UnifiedNumber__c.field-meta.xml
<CustomField>
    <fullName>Primary_UnifiedNumber__c</fullName>
    <label>Primary UnifiedNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>