MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/PrimaryPOARegistrationAuthority__c.field-meta.xml
<CustomField>
    <fullName>PrimaryPOARegistrationAuthority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary POA Registration Authority</label>
    <length>200</length>
    <type>Text</type>
</CustomField>