MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>SalesOrder__r.ProjectName__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>