MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>