MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>Rebate</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>