MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>