MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Record_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_Locked__c</fullName>
    <formula>OR(ISPICKVAL(Status__c , &apos;Closed&apos;) , ISPICKVAL(Status__c , &apos;Cancelled&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>