MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Number</label>
    <type>TextArea</type>
</CustomField>