MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Resale__c.field-meta.xml
<CustomField>
    <fullName>Resale__c</fullName>
    <description>Identifies the Resale Salesorders</description>
    <formula>SalesOrder__r.Resale__c</formula>
    <label>Resale</label>
    <type>Checkbox</type>
</CustomField>