MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Sales_Order_Installment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Installment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SalesOrderInstallments__c.SalesOrder__c</field>
            <operation>equals</operation>
            <valueField>$Source.SalesOrder__c</valueField>
        </filterItems>
        <filterItems>
            <field>SalesOrderInstallments__c.PaymentStatus__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SalesOrderInstallments__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>