MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrder</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>