MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SalesOrder_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder_Completed_Date__c</fullName>
    <formula>SalesOrder__r.Closed_Date__c +21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesOrder Completed Date</label>
    <type>Date</type>
</CustomField>