MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Secondary_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Market_Value__c</fullName>
    <label>Secondary Market Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>