MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Selected_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Selected_Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Payment Plan</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Service Requests (Selected Payment Plan)</relationshipLabel>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>