MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Selected_Unit__c.field-meta.xml
<CustomField>
    <fullName>Selected_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Service Requests (Selected Unit)</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>