MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Seller_SPA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Seller_SPA_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seller SPA Effective Date</label>
    <type>Date</type>
</CustomField>