MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Seller_Validation_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Validation_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seller Validator Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>