MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Seller_Validator_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller_Validator_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Seller Validator Email</label>
    <type>Email</type>
</CustomField>