MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Service_Charge_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge_Waiver__c</fullName>
    <label>Service Charge Waiver</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>