MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Signature_Status__c.field-meta.xml
<CustomField>
    <fullName>Signature_Status__c</fullName>
    <label>Signature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
            <value>
                <fullName>NOC Sent To Modon</fullName>
            </value>
            <value>
                <fullName>NOC Sent To Customer</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Fully Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>