MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SLA_24hr_Notified__c.field-meta.xml
<CustomField>
    <fullName>SLA_24hr_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA 24hr Notified</label>
    <type>Checkbox</type>
</CustomField>