MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SLA_72hr_Notified__c.field-meta.xml
<CustomField>
    <fullName>SLA_72hr_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA 72hr Notified</label>
    <type>Checkbox</type>
</CustomField>