MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/Source_Of_SR__c.field-meta.xml
<CustomField>
    <fullName>Source_Of_SR__c</fullName>
    <label>Source Of SR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Owner Addition And Deletion</fullName>
            </value>
            <value>
                <fullName>Milestone Update - System</fullName>
            </value>
            <value>
                <fullName>Property Transfer OffPlan</fullName>
            </value>
            <value>
                <fullName>Property Transfer Title Deed</fullName>
            </value>
            <value>
                <fullName>Sales Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>