MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SPA_Status__c.field-meta.xml
<CustomField>
    <fullName>SPA_Status__c</fullName>
    <label>SPA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>SPA Generated</fullName>
            </value>
            <value>
                <fullName>SPA Sent for Signature</fullName>
            </value>
            <value>
                <fullName>SPA Sent for Signature Customer</fullName>
            </value>
            <value>
                <fullName>SPA Sent for Signature MODON</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Customer Signature Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>