MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SR_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SR_Created_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR Created Date</label>
    <type>Date</type>
</CustomField>