MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SR_Creation_Reason__c.field-meta.xml
<CustomField>
    <fullName>SR_Creation_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SR Creation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>