MODON MRE BPDEV/force-app/main/default/objects/ServiceRequest__c/fields/SR_Sync_Ids__c.field-meta.xml
<CustomField>
    <fullName>SR_Sync_Ids__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SR Sync Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>